message.css: Fix message not wrapping at viewport width.
Use white-space: pre-wrap instead of white-space: pre,
so that text wraps at the page width rather than
continuing on the same line and requiring scrolling.

--- a/frontend/message.css
+++ b/frontend/message.css
@@ -31,7 +31,7 @@
 /* This is the root quote depth (no quoting), i.e. it's leftmost */
 .plaintext-ff {
 	padding-left: 12px;
-	white-space: pre;
+	white-space: pre-wrap;
 }
 .plaintext-ff-sub {
 	margin-top: 10px;
